syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Grpc";

package products;
service ProductsService {
    rpc GetAll(Empty) returns(Products);
    rpc GetById(ProductRowIdFilter) returns(Product);
    rpc Post(Product)  returns(Product) ;
    rpc Put(Product) returns(Empty) ;
    rpc Delete(ProductRowIdFilter) returns(Empty);
}
message Empty {}
message Product {
    int32 Id = 1;
    string ProductName = 2;
    string ProductType = 3;
    int32 Price = 4;
}
message ProductRowIdFilter {
    int32 Id = 1;
}
message Products {
    repeated Product items = 1;
}

